--- a/src/main.css
+++ b/src/main.css
@@ -6,9 +6,12 @@
 @layer base {
   html,
   body {
-    @apply bg-primary dark:bg-neutral scroll-smooth min-h-full;
+    @apply bg-base-100 scroll-smooth min-h-full;
+
+    font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
   }
 }
