--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
 
 @layer base {
   :root {
@@ -72,7 +73,11 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground m-0;
+    font-feature-settings:
+      'rlig' 1,
+      'calt' 1;
   }
 }
